--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2569,6 +2569,13 @@ input, select, textarea {
 
 /* Tiles */
 
+	/* Make the tiles container full width */
+	.tiles.full-width-container {
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+    width: 100vw;
+	}
+
 	.tiles {
 		display: -moz-flex;
 		display: -webkit-flex;
